# rust-studies

1-lessons/1-hello/: main.rs
1-lessons/OOP/src/: lib.rs  main.rs
1-lessons/adder/src/: lib.rs
1-lessons/adder/tests/: integration_test.rs  pattern_matching.rs
1-lessons/blog-state/: Cargo.toml
1-lessons/blogstate/: Cargo.toml
1-lessons/blogstate/src/: lib.rs  main.rs
1-lessons/concurrency/src/: main.rs
1-lessons/hello_cargo/: Cargo.toml
1-lessons/lifetime/src/: main.rs
1-lessons/minigrep/src/: lib.rs
1-lessons/pointers/src/: lib.rs
1-lessons/restaurant/src/: art_mod.rs  main.rs
1-lessons/restaurant/src/front_of_house/: hosting.rs
1-lessons/test2/src/: main.rs
adder/src/: lib.rs
concurrency/src/: main.rs
functional/src/: main.rs
generics/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/src/: main.rs
minigrep/: test.txt
minigrep/src/: lib.rs  main.rs
pointers/src/: lib.rs  main.rs
restaurant/src/: lib.rs  main.rs
test2/src/: main.rs
